        - These qualifiers are localized and will match your language
      - /reckless abandon <qualifier>
      - You can enable it in the configuration panel
    - Configuration options for automatically abandoning failed quests
    - Localization for spanish
  - Changed
    - Text formatting for some popups
    - Text for some configuration toggles

- v1.1.0 - 2021-06-06
  - Added
    - New command line for listing quests in a table
      - /reckless list all
      - This command is enabled by default, and can be used in combination with other commands that require information such as questID
      - Compatibility with the addon Wide Quest List
      - Compatibility with the enhanced quest log from Leatrix Plus

- v1.0.0 - 2021-05-31
  - Added
    - Abandon buttons for individual quests
    - Abandon buttons for zone quests
    - Abandon buttons for campaign quests
    - Abandon buttons for covenant callings
    - Ability to exclude quests from group abandons. Right click a quest abandon button to exclude it.
    - Command line for abandoning quests by quest id
      - /reckless abandon <questId>
      - You can enable it in the configuration panel
    - Command line for excluding quests from group abandons by quest id
      - /reckless exclude <questId>
      - You can enable it in the configuration panel
    - Command line for including quests in group abandons by quest id
      - /reckless include <questId>
      - You can enable it in the configuration panel
    - Configuration options for exclusions lists
      - Enable automatic pruning to remove a quest from the exclusion list when abandoned
      - Prune orphaned quests manually by clicking the "Prune Exclusion List" button
    - Configuration toggle for showing the login message
    - Configuration panel
    - Profile support
    - Documentation

[unreleased]: https://github.com/MotherGinger/RecklessAbandon-Classic/compare/v1.1.0...develop